--- a/assignment2/drawing-app.html
+++ b/assignment2/drawing-app.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <div class="toolbar">
+        <h1>Toolbar</h1>
+        <label for="stroke"></label>
+        <input type="color" id="line-width" name="line-width">
+        <label for="line-width"></label>
+        <input type="number" id="line-width" name="line-width" value="5">
+        <button>Clear</button>
+
+    </div>
 
 </body>
 
