--- a/assignment2/drawing-app.html
+++ b/assignment2/drawing-app.html
@@ -6,18 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drawing App</title>
+    <link rel="stylesheet" href="drawing-app.css">
 </head>
 
 <body>
-    <div class="toolbar">
-        <h1>Toolbar</h1>
-        <label for="stroke"></label>
-        <input type="color" id="line-width" name="line-width">
-        <label for="line-width"></label>
-        <input type="number" id="line-width" name="line-width" value="5">
-        <button>Clear</button>
+    <section class="container">
+        <div id="toolbar">
+            <h1>Toolbar</h1>
+            <label for="stroke"></label>
+            <input type="color" id="line-width" name="line-width">
+            <label for="line-width"></label>
+            <input type="number" id="line-width" name="line-width" value="5">
+            <button>Clear</button>
 
-    </div>
+        </div>
+
+    </section>
 
 </body>
 
