--- a/assignment2/drawing-app.html
+++ b/assignment2/drawing-app.html
@@ -14,14 +14,21 @@
         <div id="toolbar">
             <h1>Toolbar</h1>
             <label for="stroke"></label>
-            <input type="color" id="line-width" name="line-width">
+            <input type="color" id="line-color" name="line-width">
             <label for="line-width"></label>
             <input type="number" id="line-width" name="line-width" value="5">
-            <button>Clear</button>
+            <button id="clear">Clear</button>
 
         </div>
+        <div class="drawing-board">
+            <canvas id="drawing-board">
+
+            </canvas>
+        </div>
+        <script src="drawing-app.js"></script>
 
     </section>
+
 
 </body>
 
